--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Goodluck's login</title>
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/3916/3916585.png">
   <style>
     body {
       background-image: url(https://images.unsplash.com/photo-1698064333867-613aee4f4261?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3fHx8ZW58MHx8fHx8);
